--- a/personal/index.html
+++ b/personal/index.html
@@ -192,15 +192,13 @@
                 <div class="container">
                 <h2 class="section-title wow bounceInRight animated custom-white" style="text-align: center;">项目展示</h2>
                 </div> <!-- /.container -->
-				<div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >网页模板</a></div>
-
                 <div id="works_container">
                     <div class="works-single-item applications illustration web" style="height: 364px;">
                         <img class="works-item" src="images/1.jpg">
                         <div class="works-single-item-hover text-center">
                             <div class="works-icons">
-                                <a href="#"><i class="custom-icon fa fa-link"></i></a>
-                                <a class="portfolio-item" data-lightbox-gallery="our-works-item-view" href="https://escargotszy.github.io/tianmao"><i class="custom-icon fa fa-search"></i></a>
+                                <a href="https://escargotszy.github.io/tianmao"><i class="custom-icon fa fa-link"></i></a>
+                                <a class="portfolio-item" data-lightbox-gallery="our-works-item-view" href="images/1.jpg"><i class="custom-icon fa fa-search"></i></a>
                             </div>
                             <div class="works-icons-content">
                                天猫临摹
@@ -211,8 +209,8 @@
                     <img class="works-item" src="images/2.jpg">
                         <div class="works-single-item-hover text-center">
                             <div class="works-icons">
-                                <a href="#"><i class="custom-icon fa fa-link"></i></a>
-                                <a class="portfolio-item" data-lightbox-gallery="our-works-item-view" href="https://escargotszy.github.io/mi"><i class="custom-icon fa fa-search"></i></a>
+                                <a href="https://escargotszy.github.io/mi"><i class="custom-icon fa fa-link"></i></a>
+                                <a class="portfolio-item" data-lightbox-gallery="our-works-item-view" href="images/2.jpg"><i class="custom-icon fa fa-search"></i></a>
                             </div>
                             <div class="works-icons-content">
                                 小米临摹
@@ -223,8 +221,8 @@
                     <img class="works-item" src="images/3.jpg">
                         <div class="works-single-item-hover text-center">
                             <div class="works-icons">
-                                <a href="#"><i class="custom-icon fa fa-link"></i></a>
-                                <a class="portfolio-item" data-lightbox-gallery="our-works-item-view" href="https://escargotszy.github.io/enterprise"><i class="custom-icon fa fa-search"></i></a>
+                                <a href="https://escargotszy.github.io/enterprise"><i class="custom-icon fa fa-link"></i></a>
+                                <a class="portfolio-item" data-lightbox-gallery="our-works-item-view" href="images/3.jpg"><i class="custom-icon fa fa-search"></i></a>
                             </div>
                             <div class="works-icons-content">
                                 企业网站
@@ -235,8 +233,8 @@
                     <img class="works-item" src="images/4.jpg">
                         <div class="works-single-item-hover text-center">
                             <div class="works-icons">
-                                <a href="#"><i class="custom-icon fa fa-link"></i></a>
-                                <a class="portfolio-item" data-lightbox-gallery="our-works-item-view" href="https://escargotszy.github.io/weather"><i class="custom-icon fa fa-search"></i></a>
+                                <a href="https://escargotszy.github.io/weather"><i class="custom-icon fa fa-link"></i></a>
+                                <a class="portfolio-item" data-lightbox-gallery="our-works-item-view" href="images/4.jpg"><i class="custom-icon fa fa-search"></i></a>
                             </div>
                             <div class="works-icons-content">
                                  天气预报
@@ -247,8 +245,8 @@
                     <img class="works-item" src="images/5.jpg">
                         <div class="works-single-item-hover text-center">
                             <div class="works-icons">
-                                <a href="#"><i class="custom-icon fa fa-link"></i></a>
-                                <a class="portfolio-item" data-lightbox-gallery="our-works-item-view" href="https://escargotszy.github.io/todulist"><i class="custom-icon fa fa-search"></i></a>
+                                <a href="https://escargotszy.github.io/todulist"><i class="custom-icon fa fa-link"></i></a>
+                                <a class="portfolio-item" data-lightbox-gallery="our-works-item-view" href="images/5.jpg"><i class="custom-icon fa fa-search"></i></a>
                             </div>
                             <div class="works-icons-content">
                                 TODOList
@@ -259,8 +257,8 @@
                     <img class="works-item" src="images/6.jpg">
                         <div class="works-single-item-hover text-center">
                             <div class="works-icons">
-                                <a href="#"><i class="custom-icon fa fa-link"></i></a>
-                                <a class="portfolio-item" data-lightbox-gallery="our-works-item-view" href="https://escargotszy.github.io/Typing Game"><i class="custom-icon fa fa-search"></i></a>
+                                <a href="https://escargotszy.github.io/Typing Game"><i class="custom-icon fa fa-link"></i></a>
+                                <a class="portfolio-item" data-lightbox-gallery="our-works-item-view" href="images/6.jpg"><i class="custom-icon fa fa-search"></i></a>
                             </div>
                             <div class="works-icons-content">
                                 打字游戏
