--- a/personal/index.html
+++ b/personal/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/star.png" type="favicon/ico" />
+    <!--<link rel="shortcut icon" href="images/star.png" type="favicon/ico" />-->
 
     <title>PERSONAL</title>
 
@@ -87,7 +87,7 @@
                                 <div class="row .service-table">
                                     <div class="col-sm-5 border-1 custom-purple .service-table-cell">
                                         <p class="service-main-content wow pulse animated">
-                                            Lorem ipsum dolor sit amet, cadipiscing elit. Nullam dolor risus, efficitur ac ultricies quis, imperdiet sit amet nulla. dignissim mi insaer purus blandit, eget.
+                                           熟练掌握
                                         </p>
                                         <p class="service-main-content wow pulse animated">
                                             Lorem ipsum dolor sit amet, cadipiscing elit. Nullam dolor risus, efficitur ac ultricies quis, imperdiet sit amet nulla.
@@ -280,10 +280,10 @@
                         <div class="row">
                             <div class="col-sm-6 clearfix">
                                 <p class="address wow pulse animated">
-                                    House-3 Road-2, Akhalia Ghate R/A, Sylhet <br>
+                                    山西省,太原市,小店区,平阳路学府街 <br>
                                     <strong>Call: </strong>18434351025 <br>
                                     <strong>E-mail: </strong>18434351025@163.com <br>
-                                    <strong>Web: </strong><a href="#">www.themewagon.com</a>
+                                    <strong>Web: </strong><a href="https://escargotszy.github.io/personal">https://escargotszy.github.io/personal</a>
                                 </p>
                                 <ul class="social-icons text-center">
                                     <li class="wow animated fadeInLeft facebook animated">
