--- a/personal/index.html
+++ b/personal/index.html
@@ -20,8 +20,7 @@
   </head>
   <body>
 
-    <!--== 4. Header ==-->
-
+    <!--== 1. Header ==-->
         <section class="header" id="header">
             <div class="navigationbar  navbar-fixed-top">
                 <div class="container">
@@ -193,7 +192,7 @@
                 <h2 class="section-title wow bounceInRight animated custom-white" style="text-align: center;">项目展示</h2>
                 </div> <!-- /.container -->
                 <div id="works_container">
-                    <div class="works-single-item applications illustration web" style="height: 364px;">
+                    <div class="cox-lg-3 works-single-item applications illustration web" style="height: 364px;">
                         <img class="works-item" src="images/1.jpg">
                         <div class="works-single-item-hover text-center">
                             <div class="works-icons">
@@ -205,7 +204,7 @@
                             </div>
                         </div> <!-- /.works-single-item-hover -->
                     </div> <!-- /.works-single-item -->
-                    <div class="works-single-item music" style="height: 364px;">
+                    <div class="cox-lg-3 works-single-item music" style="height: 364px;">
                     <img class="works-item" src="images/2.jpg">
                         <div class="works-single-item-hover text-center">
                             <div class="works-icons">
@@ -217,7 +216,7 @@
                             </div>
                         </div> <!-- /.works-single-item-hover -->
                     </div> <!-- /.works-single-item -->
-                    <div class="works-single-item applications" style="height: 364px;">
+                    <div class="cox-lg-3 works-single-item applications" style="height: 364px;">
                     <img class="works-item" src="images/3.jpg">
                         <div class="works-single-item-hover text-center">
                             <div class="works-icons">
@@ -229,7 +228,7 @@
                             </div>
                         </div> <!-- /.works-single-item-hover -->
                     </div> <!-- /.works-single-item -->
-                    <div class="works-single-item music print" style="height: 364px;">
+                    <div class="cox-lg-3 works-single-item music print" style="height: 364px;">
                     <img class="works-item" src="images/4.jpg">
                         <div class="works-single-item-hover text-center">
                             <div class="works-icons">
@@ -265,6 +264,7 @@
                             </div>
                         </div> <!-- /.works-single-item-hover -->
                     </div> <!-- /.works-single-item -->
+
                 </div> <!-- /#container -->
             </div> <!-- /.wrapper -->
         </section> <!-- /#works -->
