--- a/personal/index.html
+++ b/personal/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="nivo-lightbox/nivo-lightbox.css">
     <link rel="stylesheet" href="nivo-lightbox/nivo-lightbox-theme.css">
     <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="http://at.alicdn.com/t/font_395548_yicm3ded93a6ecdi.css">
 
   </head>
   <body>
@@ -76,7 +77,7 @@
                                 <div class="container border-2">
                                     <div class="row">
                                         <div class="col-sm-5 border-1">
-                                            <h4 class="subtitle custom-purple wow bounceInLeft center animated">What can i do?</h4>
+                                            <h4 class="subtitle custom-purple wow bounceInLeft center animated">What Can I Do?</h4>
                                         </div>
                                         <div class="col-sm-7"></div>
                                     </div> <!-- /.row -->
@@ -86,10 +87,17 @@
                                 <div class="row .service-table">
                                     <div class="col-sm-5 border-1 custom-purple .service-table-cell">
                                         <p class="service-main-content wow pulse animated">
-                                           熟练掌握
+                                           良好的团队合作
                                         </p>
+                                        <div id="jineng">
+                                            <p class="jp  custom-purple wow bounceInLeft center" id="jneng1">非常良好的代码风格</p>
+                                            <p class="jp  custom-purple wow bounceInRight center" id="jneng2">精通HTML、CSS,熟悉HTML、CSS新增的属性</p>
+                                            <p class="jp  custom-purple wow bounceInLeft center" id="jneng3">熟练Javascript，对Javascript的对象、prototype、结构、DOM操作等有清晰的认识；熟悉Jquery等流行JS框架。</p>
+                                            <p class="jp  custom-purple wow bounceInRight center" id="jneng4">了解服务器端语言，java php。掌握Javacript与服务器端语言（java、php）的交互
+                                            </p>
+                                        </div>
                                         <p class="service-main-content wow pulse animated">
-                                            Lorem ipsum dolor sit amet, cadipiscing elit. Nullam dolor risus, efficitur ac ultricies quis, imperdiet sit amet nulla.
+
                                         </p>
                                     </div>
                                     <div class="col-sm-7 .service-table-cell">
@@ -97,9 +105,25 @@
                                             <div class="col-sm-4 text-center">
                                                 <a href="#">
                                                     <div class="add wow bounceInRight animated" data-wow-delay=".6s">
-                                                        <!--<i class="fa fa-android"></i>-->
+                                                        <i class="fontfm icon-html"></i>
                                                         <p style="font-size: 20px; border-radius: 10px;display: block">
                                                             HTML<br>CSS
+                                                        </p>
+                                                    </div>
+                                                </a>
+                                                <div class="demo">
+                                                    <div class="demo-4 wow flip animated" data-percent="99"></div>
+                                                </div>
+                                                <p class="custom-red text-center">
+                                                    90<br>Completed
+                                                </p>
+                                            </div> <!-- /.col-sm-4 -->
+                                            <div class="col-sm-4 text-center">
+                                                <a href="#">
+                                                    <div class="add wow bounceInRight animated" data-wow-delay="0.4s">
+                                                        <i class="fontfm icon-js1"></i>
+                                                        <p>
+                                                            JavaScript<br>JQuery
                                                         </p>
                                                     </div>
                                                 </a>
@@ -112,34 +136,18 @@
                                             </div> <!-- /.col-sm-4 -->
                                             <div class="col-sm-4 text-center">
                                                 <a href="#">
-                                                    <div class="add wow bounceInRight animated" data-wow-delay="0.4s">
-                                                        <!--<i class="fa fa-apple"></i>-->
+                                                    <div class="add wow bounceInRight animated" data-wow-delay="0.2s">
+                                                        <i class="fontfm icon-php1"></i>
                                                         <p>
                                                             PHP<br>Ajax
                                                         </p>
                                                     </div>
                                                 </a>
                                                 <div class="demo">
-                                                    <div class="demo-4 wow flip animated" data-percent="75"></div>
+                                                    <div class="demo-4 wow flip animated" data-percent="89"></div>
                                                 </div>
                                                 <p class="custom-red text-center">
-                                                    75<br>Completed
-                                                </p>
-                                            </div> <!-- /.col-sm-4 -->
-                                            <div class="col-sm-4 text-center">
-                                                <a href="#">
-                                                    <div class="add wow bounceInRight animated" data-wow-delay="0.2s">
-                                                        <!--<i class="fa fa-bullseye"></i>-->
-                                                        <p>
-                                                            JavaScript<br>JQuery
-                                                        </p>
-                                                    </div>
-                                                </a>
-                                                <div class="demo">
-                                                    <div class="demo-4 wow flip animated" data-percent="85"></div>
-                                                </div>
-                                                <p class="custom-red text-center">
-                                                    85<br>Completed
+                                                    89<br>Completed
                                                 </p>
                                             </div> <!-- /.col-sm-4 -->
                                         </div> <!-- /.row -->
@@ -167,17 +175,17 @@
                 <div class="row">
                     <div class="about-table">
                          <div class="col-md-7 col-sm-12 about-table-cell">
-                            <div class="about-content">
-                                <div class="wrapper">
-                                    <h2 class="section-title wow bounceInRight animated">about me</h2>
+                            <div class="about-content container">
+                                <div class="wrapper col-lg-12">
+                                    <h2 class="section-title wow bounceInRight animated" style="text-align: center">关于我</h2>
                                     <h4 class="section-paragraph wow pulse animated" style="font-size: 16px;">Mr.Zhang</h4>
                                     <p class="section-paragraph wow pulse animated">
-                                        主要从事前端工作,非常精通HTML/CSS JavaScript jQuery框架等,做过电商类网站,也做过企业类网站,会做固定宽高的网站,也会做响应式网站,还会移动端的,我非常熟悉JavaScript中对于Document操作,利用操作Document文档对象可以对HTML进行检查、修改以及增加内容,利用JavaScript更好的去丰富页面,增强交互效果。同时我也非常熟悉jQuery框架利用它可以去更好的处理兼容性,简化代码。
+                                        <p class="bp1 wow animated slideInRight">主要从事前端工作,非常精通HTML/CSS JavaScript jQuery框架等,做</p><p class="bp2 wow animated rotateInDownRight">过电商类网站,也做过企业类网站,会做固定宽高的网站,也会做响应式网站,还会移动端的,我非常熟悉JavaScript</p><p class="bp3 wow animated bounceInLeft">中对于Document操作,利用操作Document文档对象可以对HTML进行检查、修改以及增加内</p><p class="bp4 wow animated lightSpeedIn">容,利用JavaScript更好的去丰富页面,增强交互效果。同时我也非常熟悉jQuery框架利用它可以去更好的处理兼容性,简化代码。</p>
                                     </p> <!-- /.section-paragraph -->
-                                </div> <!-- /.wrapper --> 
+                                </div> <!-- /.wrapper -->
                             </div> <!-- /.about-content -->
                         </div>
-                        <div class="col-md-4 col-sm-12 about-table-cell" style="background:url(images/part_3_bg.jpg);background-size:cover;">
+                        <!--<div class="col-md-4 col-sm-12 about-table-cell" style="background:url(images/part_3_bg.jpg);background-size:cover;">-->
                         </div>
                     </div> <!-- /.about-table -->
                 </div> <!-- /.row -->
@@ -189,9 +197,9 @@
         <section id="works" class="works">
             <div class="wrapper">
                 <div class="container">
-                <h2 class="section-title wow bounceInRight animated custom-white" style="text-align: center;">项目展示</h2>
+                <h2 class="section-title wow bounceInLeft animated custom-white" style="text-align: left;">项目展示</h2>
                 </div> <!-- /.container -->
-                <div id="works_container">
+                <div id="works_container" class="rotateIn animated wow">
                     <div class="cox-lg-3 works-single-item applications illustration web" style="height: 364px;">
                         <img class="works-item" src="images/1.jpg">
                         <div class="works-single-item-hover text-center">
@@ -342,8 +350,9 @@
             </div> <!-- /.contact-content -->
         </section> <!-- /#contact -->
         <a href="#header" id="back-to-top" class="top"><i class="fa fa-chevron-up"></i></a>
-    
-        
+
+
+
 
 
     <script src="js/jquery-1.11.2.min.js"></script>
@@ -355,6 +364,26 @@
     <script src="js/jquery.validate.js"></script>
     <script src="nivo-lightbox/nivo-lightbox.min.js"></script>
     <script src="js/script.js"></script>
+    <script>
+        jQuery(window).resize(function(){
+            resizenow();
+        });
+        function resizenow() {
+
+
+            const $triangles = document.querySelectorAll('.triangle')
+            const template = `<svg class="triangle-svg" viewBox="0 0 140 141">
+    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+      <polygon class="triangle-polygon"  points="70 6 136 138 4 138"></polygon>
+    </g>
+  </svg>`
+
+            Array.prototype.forEach.call($triangles, ($triangle, index) => {
+            $triangle.innerHTML = template
+        })
+        }
+        resizenow();
+    </script>
 
   </body>
 </html>
