--- a/personal/index.html
+++ b/personal/index.html
@@ -91,9 +91,9 @@
                                         </p>
                                         <div id="jineng">
                                             <p class="jp  custom-purple wow bounceInLeft center" id="jneng1">非常良好的代码风格</p>
-                                            <p class="jp  custom-purple wow bounceInRight center" id="jneng2">精通HTML、CSS,熟悉HTML、CSS新增的属性</p>
-                                            <p class="jp  custom-purple wow bounceInLeft center" id="jneng3">熟练Javascript，对Javascript的对象、prototype、结构、DOM操作等有清晰的认识；熟悉Jquery等流行JS框架。</p>
-                                            <p class="jp  custom-purple wow bounceInRight center" id="jneng4">了解服务器端语言，java php。掌握Javacript与服务器端语言（java、php）的交互
+                                            <p class="jp  custom-purple wow bounceInRight center" id="jneng2">精通HTML、CSS,熟悉HTML5、CSS3、es6新增的属性</p>
+                                            <p class="jp  custom-purple wow bounceInLeft center" id="jneng3">熟练前端框架、React、Vue、DOM操作等有清晰的认识；熟悉Jquery等流行JS框架。</p>
+                                            <p class="jp  custom-purple wow bounceInRight center" id="jneng4">了解服务器端语言，node php。掌握Javacript与服务器端语言（php）的交互
                                             </p>
                                         </div>
                                         <p class="service-main-content wow pulse animated">
@@ -115,7 +115,7 @@
                                                     <div class="demo-4 wow flip animated" data-percent="99"></div>
                                                 </div>
                                                 <p class="custom-red text-center">
-                                                    90<br>Completed
+                                                    100<br>Completed
                                                 </p>
                                             </div> <!-- /.col-sm-4 -->
                                             <div class="col-sm-4 text-center">
@@ -131,7 +131,7 @@
                                                     <div class="demo-4 wow flip animated" data-percent="90"></div>
                                                 </div>
                                                 <p class="custom-red text-center">
-                                                    90<br>Completed
+                                                    100<br>Completed
                                                 </p>
                                             </div> <!-- /.col-sm-4 -->
                                             <div class="col-sm-4 text-center">
@@ -139,7 +139,7 @@
                                                     <div class="add wow bounceInRight animated" data-wow-delay="0.2s">
                                                         <i class="fontfm icon-php1"></i>
                                                         <p>
-                                                            PHP<br>Ajax
+                                                            React<br>Vue
                                                         </p>
                                                     </div>
                                                 </a>
@@ -147,7 +147,7 @@
                                                     <div class="demo-4 wow flip animated" data-percent="89"></div>
                                                 </div>
                                                 <p class="custom-red text-center">
-                                                    89<br>Completed
+                                                    100<br>Completed
                                                 </p>
                                             </div> <!-- /.col-sm-4 -->
                                         </div> <!-- /.row -->
@@ -180,7 +180,7 @@
                                     <h2 class="section-title wow bounceInRight animated" style="text-align: center">关于我</h2>
                                     <h4 class="section-paragraph wow pulse animated" style="font-size: 16px;">Mr.Zhang</h4>
                                     <p class="section-paragraph wow pulse animated">
-                                        <p class="bp1 wow animated slideInRight">主要从事前端工作,非常精通HTML/CSS JavaScript jQuery框架等,做</p><p class="bp2 wow animated rotateInDownRight">过电商类网站,也做过企业类网站,会做固定宽高的网站,也会做响应式网站,还会移动端的,我非常熟悉JavaScript</p><p class="bp3 wow animated bounceInLeft">中对于Document操作,利用操作Document文档对象可以对HTML进行检查、修改以及增加内</p><p class="bp4 wow animated lightSpeedIn">容,利用JavaScript更好的去丰富页面,增强交互效果。同时我也非常熟悉jQuery框架利用它可以去更好的处理兼容性,简化代码。</p>
+                                        <p class="bp1 wow animated slideInRight">主要从事前端工作,非常精通HTML/CSS JavaScript jQuery框架等,做</p><p class="bp2 wow animated rotateInDownRight">过电商类网站,也做过企业类网站,webapp,也做过小程序,还会移动端的,熟练使用JavaScript</p><p class="bp3 wow animated bounceInLeft">中对于Document操作,利用操作Document文档对象可以对HTML进行检查、修改以及增加内</p><p class="bp4 wow animated lightSpeedIn">容,利用JavaScript更好的去丰富页面,增强交互效果。同时我也非常熟悉jQuery框架利用它可以去更好的处理兼容性,简化代码。</p>
                                     </p> <!-- /.section-paragraph -->
                                 </div> <!-- /.wrapper -->
                             </div> <!-- /.about-content -->
@@ -288,9 +288,8 @@
                         <div class="row">
                             <div class="col-sm-6 clearfix">
                                 <p class="address wow pulse animated">
-                                    山西省,太原市,小店区,平阳路学府街 <br>
-                                    <strong>Call: </strong>18434351025 <br>
-                                    <strong>E-mail: </strong>18434351025@163.com <br>
+                                    上海市,宝山区,顾村镇,龙湖天街 <br>
+                                    <strong>E-mail: </strong>2565288200@qq.com <br>
                                     <strong>Web: </strong><a href="https://escargotszy.github.io/personal">https://escargotszy.github.io/personal</a>
                                 </p>
                                 <ul class="social-icons text-center">
