--- a/personal/index.html
+++ b/personal/index.html
@@ -180,7 +180,9 @@
                                     <h2 class="section-title wow bounceInRight animated" style="text-align: center">关于我</h2>
                                     <h4 class="section-paragraph wow pulse animated" style="font-size: 16px;">Mr.Zhang</h4>
                                     <p class="section-paragraph wow pulse animated">
-                                        <p class="bp1 wow animated slideInRight">主要从事前端工作,非常精通HTML/CSS JavaScript jQuery框架等,做</p><p class="bp2 wow animated rotateInDownRight">过电商类网站,也做过企业类网站,webapp,也做过小程序,还会移动端的,熟练使用JavaScript</p><p class="bp3 wow animated bounceInLeft">中对于Document操作,利用操作Document文档对象可以对HTML进行检查、修改以及增加内</p><p class="bp4 wow animated lightSpeedIn">容,利用JavaScript更好的去丰富页面,增强交互效果。同时我也非常熟悉jQuery框架利用它可以去更好的处理兼容性,简化代码。</p>
+                                        <p class="bp1 wow animated slideInRight"> 5年的前端开发经验，技术层面 vue，react，reacthooks，typescript，umi，小程序，git，jeckins，webpack。
+                                          热爱互联网行业，喜欢各种码农技术和黑科技上进心强，良好的代码规范，在工作中可以找到成就感和满足感。
+                                          为人谦虚幽默，善于交流，有很强的适应需求能力，团队意识和责任感以及很强的抗压能力 </p><p class="bp2 wow animated rotateInDownRight">做过电商类网站,也做过企业类网站,webapp,也做过小程序,还会移动端的,熟练使用JavaScript</p><p class="bp3 wow animated bounceInLeft">中对于Document操作,利用操作Document文档对象可以对HTML进行检查、修改以及增加内</p><p class="bp4 wow animated lightSpeedIn">容,利用JavaScript更好的去丰富页面,增强交互效果。同时我也非常熟悉jQuery框架利用它可以去更好的处理兼容性,简化代码。</p>
                                     </p> <!-- /.section-paragraph -->
                                 </div> <!-- /.wrapper -->
                             </div> <!-- /.about-content -->
